[project]
name = "userhive"
version = "0.1.0"
description = ""
authors = [
    {name = "muhammad.sufyian",email = "s.m.sufyian@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "pre-commit (>=3.5.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "userhive", from = "src"}]

[tool.isort]
profile = "black"
multi_line_output = 3


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
